# since-until

./: Cargo.toml  README.md
contrib/: until.zsh
src/: cli.rs  lib.rs
